Erasing line written thru github.com

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Testing my knowledge for Midterm 2
 changing the file on github
-updating file on github NOT thru .git
+
+erasing line that was written on www.github.com
